# socketry-backend

./: .env.test  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml  test.yml
app/: app.py
scripts/: entrypoint.sh
test/: test_example.py
tests/: test_socket_connection.py
